Finalized integration of topic and main branch. Fixed Shuffle button visibility. TODO: rename button. Fine tuning of confetti parameters.

--- a/project js2/css/style.css
+++ b/project js2/css/style.css
@@ -81,7 +81,7 @@ button {
     font-variant: small-caps;
     font-stretch: narrower;
     text-shadow: gray 1px 1px 4px;
-    display:block;
+    display:none;
 
 }
 
